<resources>
    <string name="app_name">AIT</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_reboot">Reboot</string>
    <string name="action_power">Power Off</string>
    <string name="action_reboot_recovery">Reboot Recovery</string>
    <string name="execute">Execute</string>
    <string name="terminal">Terminal</string>
    <string name="example_ls">Example - ls</string>
    <string name="thinking_for_email_address">thinking for email address</string>
    <string name="rom_s">Rom\'s</string>
    <string name="recovery">Recovery</string>
    <string name="kernel">Kernel</string>
    <string name="communicate">Communicate</string>
    <string name="contact">Contact</string>
    <string name="for_root_users">FOR ROOT USERS</string>
    <string name="flash_boot">Flash Boot</string>
    <string name="flash_recovery">Flash Recovery</string>
    <string name="about">About</string>
    <string name="message">message</string>
    <string name="flash_boot_image">Flash Boot Image</string>
    <string name="backup_boot_image">Backup Boot Image</string>
    <string name="how_to_use">How to use ?</string>
    <string name="flash">Flash :-</string>
    <string name="save_boot_image">Save boot.img file to your Internal sd in folder named AIT and click on flash button.</string>
    <string name="save_recovery_img">Save recovery.img file to your Internal sd in folder named AIT and click on flash button.</string>
    <string name="backup_recovery_image">BACKUP RECOVERY IMAGE</string>
    <string name="flash_recovey_image">flash recovey image</string>
    <string name="mods">Mods</string>
    <string name="title_activity_mods">mods</string>

    <string name="action_settings">Settings</string>
    <string name="permssive">Permssive</string>
    <string name="enforcing">Enforcing</string>
    <string name="change_selinux">Change Selinux</string>
    <string name="not_rooted">"Device is not rooted "</string>
    <string name="saved_boot">Saved to sdcard/AIT/Boot.img</string>
    <string name="flashed_boot">Flashed boot.img from /sdcard/AIT/boot.img</string>
    <string name="setenforce1">Changed to enforcing</string>
    <string name="setenforce0">Changed to permssive</string>
    <string name="saved_recovery">Saved to sdcard/AIT/recovery.img</string>
    <string name="flashed_recovery">Flashed recovery.img from /sdcard/AIT/recovery.img</string>
</resources>
